# hierarchical_data

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
hierarchical_data/: asgi.py  settings.py  urls.py  wsgi.py
mptt_file/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mptt_file/migrations/: 0001_initial.py
mptt_file/templates/: genericform.html  index.html
